--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,6 +45,10 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
+    permissions:
+      id-token: write  # OIDC için gerekli izin
+      contents: read  # paketi okumak için
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
@@ -54,10 +58,14 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel twine build
     - name: Build package
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build
+    - name: Publish package to PyPI
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: pypa/gh-action-pypi-publish@release/v1
+      # PYPI_API_TOKEN gerekmiyor - Trusted Publisher kullanılıyor
     - name: Check package
       run: |
         twine check dist/*
