--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -62,20 +62,17 @@ jobs:
     - name: Build package
       run: |
         python -m build
-    - name: Publish package to PyPI
-      if: startsWith(github.ref, 'refs/tags/v')
-      uses: pypa/gh-action-pypi-publish@release/v1
-      # PYPI_API_TOKEN gerekmiyor - Trusted Publisher kullanılıyor
-    - name: Check package
-      run: |
-        twine check dist/*
+    
+    # API Token ile yayınlama (Trusted Publisher yerine)
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
+        twine check dist/*
         twine upload --skip-existing dist/*
+    
     - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/v')
       uses: softprops/action-gh-release@v1
