--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,12 +63,12 @@ jobs:
       run: |
         python -m build
     
-    # API Token ile yayınlama (Trusted Publisher yerine)
+    # API Token ile yayınlama (PyPI API token kullanarak)
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
       env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         twine check dist/*
         twine upload --skip-existing dist/*
