--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,7 +63,7 @@ jobs:
       run: |
         python -m build
     
-    # API Token ile yayınlama (PyPI API token kullanarak)
+    # API Token ile yayınlama
     - name: Publish to PyPI
       if: startsWith(github.ref, 'refs/tags/v')
       env:
@@ -71,7 +71,7 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         twine check dist/*
-        twine upload --skip-existing dist/*
+        twine upload --skip-existing dist/* --verbose
     
     - name: Create GitHub Release
       if: startsWith(github.ref, 'refs/tags/v')
