--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -47,7 +47,7 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
     permissions:
       id-token: write  # OIDC için gerekli izin
-      contents: read  # paketi okumak için
+      contents: write  # paketi okumak içink için write izni gerekiyor (değişiklik burada)
     
     steps:
     - uses: actions/checkout@v2
@@ -80,5 +80,4 @@ jobs:
         files: |
           dist/*.whl
           dist/*.tar.gz
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}  # Token'ı burada belirtin
